// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/switch/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/switch/demo/custom-style.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div>
      <button
        aria-checked="true"
        class="dcloud-switch dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch custom-switch-primary dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch custom-switch-success dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch custom-switch-info dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch custom-switch-warning dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch custom-switch-error dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
    </div>
    <div>
      <button
        aria-checked="true"
        class="dcloud-switch square dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch square custom-switch-primary dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch square custom-switch-success dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch square custom-switch-info dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch square custom-switch-warning dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
      <button
        aria-checked="true"
        class="dcloud-switch square custom-switch-error dcloud-switch-checked"
        role="switch"
        style="margin-right:8px"
        type="button"
      >
        <div
          class="dcloud-switch-handle"
        />
        <span
          class="dcloud-switch-inner"
        />
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/switch/demo/disabled.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked dcloud-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "1": <br />,
  "2": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/switch/demo/loading.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-loading dcloud-switch-checked dcloud-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin dcloud-switch-loading-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "1": <br />,
  "2": <button
    aria-checked="false"
    class="dcloud-switch dcloud-switch-small dcloud-switch-loading dcloud-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin dcloud-switch-loading-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/switch/demo/size.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "1": <br />,
  "2": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-small dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/switch/demo/text.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    >
      开启
    </span>
  </button>,
  "1": <br />,
  "2": <button
    aria-checked="false"
    class="dcloud-switch"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    >
      0
    </span>
  </button>,
  "3": <br />,
  "4": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    >
      <span
        aria-label="check"
        class="anticon anticon-check"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
          />
        </svg>
      </span>
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 5,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
